welcome.lessons.welcome.array.array667.Array667.scala.error
array667:12: error: type mismatch;
 found   : (Int, Int)
 required: Int
  return (nb_6,nb_7)
         ^